--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "mongoose": "^6.8.1",
     "nodemon": "^2.0.20",
     "pdf-parse": "^1.1.1",
     "pdf.js-extract": "^0.2.1"
