--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,6 @@ services:
     depends_on:
       - "mongodb-server"
     restart: "unless-stopped"
+    volumes:
+      - /usr/projects/resume_parser/node_modules
+      - .:/usr/projects/resume_parser
